--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="sidebar">
 Hot
   <ul>
-  <li id="menuonline"><a href="./online.php">Txt2tags Online</a></li>
+  <li id="menuonline"><a href="./online.html">Txt2tags Online</a></li>
   <li id="menumarkup"><a href="./markup.html">Markup Demo</a></li>
   </ul>
 About
